Eliminado codigo del pedido. makePayment envia solo el id de libro en linea pedido.

--- a/src/app/page/pedidos-cliente/pedidos-cliente.component.html
+++ b/src/app/page/pedidos-cliente/pedidos-cliente.component.html
@@ -44,11 +44,11 @@
 
         <div
         class="flex flex-col lg:flex-row lg:items-center justify-between px-6 pb-6 border-b border-gray-200">
-        <div class="data">
-          <p class="font-semibold text-base leading-7 text-black mt-4">Pedido: <span class="text-gray-400 font-medium">
-                            {{pedido.codigo}}</span></p>
+<!--        <div class="data">-->
+<!--          <p class="font-semibold text-base leading-7 text-black mt-4">Pedido: <span class="text-gray-400 font-medium">-->
+<!--                            {{pedido.codigo}}</span></p>-->
 
-        </div>
+<!--        </div>-->
           <div class="data">
             <p class="font-semibold text-base leading-7 text-black mt-4">Fecha del pedido: <span class="text-gray-400 font-medium">
                             {{pedido.fecha | date: 'dd/MM/yyyy'}}</span></p>
