Añadida ruta a mis pedidos. Se muestra icono carrito

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -51,7 +51,7 @@
         <ul [ngClass]="{'block': showMenu, 'hidden': !showMenu}"
             class="absolute bg-white  shadow-md rounded mt-2 w-40 right-0">
           <li><a routerLink="/perfil" class=" text-l block px-4 py-2 text-custom-blue hover:bg-gray-100">Perfil</a></li>
-          <li><a routerLink="/mis-pedidos" class=" text-l block px-4 py-2 text-custom-blue hover:bg-gray-100">Mis Pedidos</a></li>
+          <li><a routerLink="/pedidos-cliente" class=" text-l block px-4 py-2 text-custom-blue hover:bg-gray-100">Mis Pedidos</a></li>
           <li>
             <button (click)="logout()" class=" text-l block w-full text-left px-4 py-2 hover:bg-red-100 text-red-600">
               Cerrar Sesión
