--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -40,16 +40,16 @@
 </section>
 
 <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 p-4 bg-customGreen">
-  <!-- Filtro Catalogo -->
+
   <div class="flex-shrink-0">
     <!-- Filtros -->
     <div class="bg-[#1D2C4B] max-w-[333px] max-h-[65px] text-center rounded-lg text-white">
       <h1 class="text-2xl font-bold">Filtros</h1>
     </div>
 
-    <!--###################   FILTRO PRECIO ####################################-->
+
+    <!-- FILTRO PRECIO -->
     <div class="border-b border-gray-200 py-6">
-      <!-- Precios -->
       <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9 border-t border-custom-blue">
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Precios</h3>
         <ul class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
@@ -75,7 +75,9 @@
           </li>
         </ul>
       </div>
-      <!--#################################3 FILTRO CATEGORÍA ############################## -->
+
+
+      <!-- FILTRO CATEGORÍA -->
       <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9 border-t border-custom-blue">
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Categoría</h3>
         <ul class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
@@ -90,46 +92,67 @@
         </ul>
       </div>
     </div>
+
+
+
+
+
+
   </div>
 
-
-
-
   <div class="bg-white">
-    <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+    <div class="mx-auto max-w-2xl px-4 py-4 sm:px-6 sm:py-4 lg:max-w-7xl lg:px-8">
       <div *ngIf="noResults" class="text-center text-red-600 font-bold mt-4 bg-white">
         <p>No se han encontrado resultados</p>
         <p>No hemos encontrado lo que busca pero si lo desea pude ponerse en contacto con nosotros y solicitarlo, o quizá prefiera volver a intentarlo realizando una búsqueda avanzada que se ajuste mejor a sus criterios.</p>
       </div>
     </div>
+
+
+
+    <!--    <div class="mx-auto max-w-2xl px-4 py-4 sm:px-6 sm:py-4 lg:max-w-7xl lg:px-8">-->
+    <!--      <div *ngIf="!libros || libros.length === 0" class="text-center text-black-600 mt-4 bg-white">-->
+    <!--        <p>No hay libros disponibles</p>-->
+    <!--      </div>-->
+    <!--    </div>-->
+
+
+
+
+
+
+
     <div class="max-w-2xl px-4 sm:px-6  lg:max-w-7xl lg:px-8">
       <div *ngIf="!noResults" class="card--1 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
         <div *ngFor="let libro of filteredBooks" class="group  group cursor-pointer group overflow-hidden relative">
-    <div class="card relative max-h-100 max-w-sm rounded overflow-hidden shadow-lg bg-white">
-      <div class="relative">
-        <img [src]="libro.imagen" [alt]="libro.titulo"  class=" aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
-        <button  (click)="addToCart(libro)" class="add-to-cart absolute top-0 right-0 mt-4 mr-4 py-2 px-4 bg-blue-500 text-white rounded opacity-0 transition-opacity duration-300">
+          <div class="card relative max-h-100 max-w-sm rounded overflow-hidden shadow-lg bg-white">
+            <div class="relative">
+              <img [src]="libro.imagen" [alt]="libro.titulo"  class=" h-80 aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
+              <button  (click)="addToCart(libro)" class="add-to-cart absolute top-0 right-0 mt-4 mr-4 py-2 px-4 bg-blue-500 text-white rounded opacity-0 transition-opacity duration-300">
 
-                          Añadir al carrito
-                        </button>
-      </div>
-      <div class="px-6 py-4 flex flex-col items-center">
-        <h3 class="mt-4 text-lg font-bold text-gray-800 text-center">{{ libro.titulo }}</h3>
-                  <p class="text-sm text-gray-600 text-center">por {{ libro.autor.nombre }} {{ libro.autor.apellidos }}</p>
-                  <p class="mt-2 text-xl text-center font-semibold text-blue-900">{{ libro.precio | currency: 'EUR' }}</p>
+                Añadir al carrito
+              </button>
+            </div>
+            <div class="px-6 py-4 flex flex-col items-center">
+              <h3 class="mt-0 mb-0 text-lg font-bold text-gray-800 text-center line-clamp-2">{{ libro.titulo }}</h3>
+              <p class=" mt-0 mb-0 text-sm text-gray-600 text-center">por {{ libro.autor.nombre }} {{ libro.autor.apellidos }}</p>
+              <p class="mt-2 text-xl text-center font-semibold text-blue-900">{{ libro.precio | currency: 'EUR' }}</p>
 
 
-                  <button (click)="verDetallesLibro(libro.id)" class="my-4 px-6 py-3 bg-blue-900 text-white font-medium rounded-lg">Ver detalles</button>
-                  <div class="absolute bg-gray-50 -bottom-24 w-56 p-3 flex flex-col gap-1">
-                  </div>
-      </div>
-    </div>
+              <button (click)="verDetallesLibro(libro.id)" class="my-4 px-6 py-3 bg-blue-900 text-white font-medium rounded-lg">Ver detalles</button>
+              <div class="absolute bg-gray-50 -bottom-24 w-56 p-3 flex flex-col gap-1">
+              </div>
+            </div>
+          </div>
 
         </div>
 
 
       </div>
     </div>
+
+
+
   </div>
 
 
@@ -151,8 +174,8 @@
   <nav class="isolate inline-flex -space-x-px rounded-md shadow-xs" aria-label="Pagination">
 
     <button
-            (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1"
-       class="relative inline-flex items-center rounded-l-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 cursor-pointer">
+      (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1"
+      class="relative inline-flex items-center rounded-l-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 cursor-pointer">
       Anterior
       <span class="sr-only"></span>
       <svg class="size-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -160,7 +183,7 @@
       </svg>
     </button>
     <button (click)="goToPage(currentPage + 1)" [disabled]="currentPage >= totalPages"
-       class="relative inline-flex items-center rounded-r-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 cursor-pointer">
+            class="relative inline-flex items-center rounded-r-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 cursor-pointer">
       <span class="sr-only"></span>
       Siguiente
       <svg class="size-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -169,9 +192,3 @@
     </button>
   </nav>
 </div>
-
-
-
-
-
-
