--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -1,12 +1,3 @@
-<!--<div class="cart-icon-container" (click)="toggleCart()">-->
-<!--  <svg class="icon-cart" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">-->
-<!--    <path d="M240-80q-33 0-56.5-23.5T160-160v-480q0-33 23.5-56.5T240-720h80q0-66 47-113t113-47q66 0 113 47t47 113h80q33 0 56.5 23.5T800-640v480q0 33-23.5 56.5T720-80H240Zm0-80h480v-480h-80v80q0 17-11.5 28.5T600-520q-17 0-28.5-11.5T560-560v-80H400v80q0 17-11.5 28.5T360-520q-17 0-28.5-11.5T320-560v-80h-80v480Zm160-560h160q0-33-23.5-56.5T480-800q-33 0-56.5 23.5T400-720ZM240-160v-480 480Z"/>-->
-<!--  </svg>-->
-<!--  <span class="cantidad">{{ cartQuantity }}</span>-->
-<!--</div>-->
-
-
-
 <section class="bg-customGreen py-2 md:py-4 shadow-gray-500 shadow-sm" xmlns="http://www.w3.org/1999/html">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <div class="container mx-auto flex flex-col md:flex-row items-centerpx-4 md:px-6 lg:px-8 lg:gap-x-4 justify-between">
@@ -48,48 +39,45 @@
 
 </section>
 
-<!--<div class="flex items-center space-x-2 mx-60 my-10 px-20">-->
-<!--  <label for="sort" class="-->
-<!--   mb-2  font-bold text-[20px] text-[#1D2C4B] font-montserrat  text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"-->
-<!--  >Ordenar por</label>-->
-<!--  <p>You select your team {{ opcionSeleccionada }} using change event</p>-->
-<!--  <select id="sort" class="border border-gray-300  text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"-->
-<!--          #filtro (change)="onSelected(filtro.value)">-->
-<!--    <option default>Pick a team</option>-->
-<!--    <option  value="autor">Autor</option>-->
-<!--    <option value="titulo">Libro</option>-->
-<!--    <option value="fecha">Fecha edición</option>-->
-<!--    <option value="precio">Precio</option>-->
-<!--  </select>-->
-
-<!--</div>-->
-
-
-
-
-
 <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 p-4 bg-customGreen">
-  <!-- Filtro Catalogo -->
+
   <div class="flex-shrink-0">
     <!-- Filtros -->
     <div class="bg-[#1D2C4B] max-w-[333px] max-h-[65px] text-center rounded-lg text-white">
       <h1 class="text-2xl font-bold">Filtros</h1>
     </div>
 
-    <!--###################   FILTRO PRECIO ####################################-->
+
+    <!-- FILTRO PRECIO -->
     <div class="border-b border-gray-200 py-6">
-      <!-- Precios -->
       <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9 border-t border-custom-blue">
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Precios</h3>
         <ul class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
-          <li><input type="checkbox" (change)="filterByPrice('menor5')" [checked]="selectedPriceRange ==='menor5'" class="mr-2">Menos de 5 euros</li>
-          <li><input type="checkbox" (change)="filterByPrice('5-10')" [checked]="selectedPriceRange ==='5-10'" class="mr-2">De 5 a 10 euros</li>
-          <li><input type="checkbox" (change)="filterByPrice('10-15')" [checked]="selectedPriceRange ==='10-15'" class="mr-2">De 10 a 15 euros</li>
-          <li><input type="checkbox" (change)="filterByPrice('15-40')" [checked]="selectedPriceRange ==='15-40'" class="mr-2">De 15 a 40 euros</li>
-          <li><input type="checkbox" (change)="filterByPrice('mayor40')" [checked]="selectedPriceRange ==='mayor40'" class="mr-2">Más de 40 euros</li>
+          <li>
+            <input type="checkbox" (change)="filterByPrice('menor5')" [checked]="selectedPriceRanges.includes('menor5')" class="mr-2">
+            Menos de 5 euros
+          </li>
+          <li>
+            <input type="checkbox" (change)="filterByPrice('5-10')" [checked]="selectedPriceRanges.includes('5-10')" class="mr-2">
+            De 5 a 10 euros
+          </li>
+          <li>
+            <input type="checkbox" (change)="filterByPrice('10-15')" [checked]="selectedPriceRanges.includes('10-15')" class="mr-2">
+            De 10 a 15 euros
+          </li>
+          <li>
+            <input type="checkbox" (change)="filterByPrice('15-40')" [checked]="selectedPriceRanges.includes('15-40')" class="mr-2">
+            De 15 a 40 euros
+          </li>
+          <li>
+            <input type="checkbox" (change)="filterByPrice('mayor40')" [checked]="selectedPriceRanges.includes('mayor40')" class="mr-2">
+            Más de 40 euros
+          </li>
         </ul>
       </div>
-      <!--#################################3 FILTRO CATEGORÍA ############################## -->
+
+
+      <!-- FILTRO CATEGORÍA -->
       <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9 border-t border-custom-blue">
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Categoría</h3>
         <ul class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
@@ -104,10 +92,13 @@
         </ul>
       </div>
     </div>
+
+
+
+
+
+
   </div>
-
-
-
 
   <div class="bg-white">
     <div class="mx-auto max-w-2xl px-4 py-4 sm:px-6 sm:py-4 lg:max-w-7xl lg:px-8">
@@ -117,11 +108,15 @@
       </div>
     </div>
 
-<!--    <div class="mx-auto max-w-2xl px-4 py-4 sm:px-6 sm:py-4 lg:max-w-7xl lg:px-8">-->
-<!--      <div *ngIf="!libros || libros.length === 0" class="text-center text-black-600 mt-4 bg-white">-->
-<!--        <p>No hay libros disponibles</p>-->
-<!--      </div>-->
-<!--    </div>-->
+
+
+    <!--    <div class="mx-auto max-w-2xl px-4 py-4 sm:px-6 sm:py-4 lg:max-w-7xl lg:px-8">-->
+    <!--      <div *ngIf="!libros || libros.length === 0" class="text-center text-black-600 mt-4 bg-white">-->
+    <!--        <p>No hay libros disponibles</p>-->
+    <!--      </div>-->
+    <!--    </div>-->
+
+
 
 
 
@@ -130,25 +125,25 @@
     <div class="max-w-2xl px-4 sm:px-6  lg:max-w-7xl lg:px-8">
       <div *ngIf="!noResults" class="card--1 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
         <div *ngFor="let libro of filteredBooks" class="group  group cursor-pointer group overflow-hidden relative">
-    <div class="card relative max-h-100 max-w-sm rounded overflow-hidden shadow-lg bg-white">
-      <div class="relative">
-        <img [src]="libro.imagen" [alt]="libro.titulo"  class=" h-80 aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
-        <button  (click)="addToCart(libro)" class="add-to-cart absolute top-0 right-0 mt-4 mr-4 py-2 px-4 bg-blue-500 text-white rounded opacity-0 transition-opacity duration-300">
+          <div class="card relative max-h-100 max-w-sm rounded overflow-hidden shadow-lg bg-white">
+            <div class="relative">
+              <img [src]="libro.imagen" [alt]="libro.titulo"  class=" h-80 aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
+              <button  (click)="addToCart(libro)" class="add-to-cart absolute top-0 right-0 mt-4 mr-4 py-2 px-4 bg-blue-500 text-white rounded opacity-0 transition-opacity duration-300">
 
-                          Añadir al carrito
-                        </button>
-      </div>
-      <div class="px-6 py-4 flex flex-col items-center">
-        <h3 class="mt-0 mb-0 text-lg font-bold text-gray-800 text-center line-clamp-2">{{ libro.titulo }}</h3>
-                  <p class=" mt-0 mb-0 text-sm text-gray-600 text-center">por {{ libro.autor.nombre }} {{ libro.autor.apellidos }}</p>
-                  <p class="mt-2 text-xl text-center font-semibold text-blue-900">{{ libro.precio | currency: 'EUR' }}</p>
+                Añadir al carrito
+              </button>
+            </div>
+            <div class="px-6 py-4 flex flex-col items-center">
+              <h3 class="mt-0 mb-0 text-lg font-bold text-gray-800 text-center line-clamp-2">{{ libro.titulo }}</h3>
+              <p class=" mt-0 mb-0 text-sm text-gray-600 text-center">por {{ libro.autor.nombre }} {{ libro.autor.apellidos }}</p>
+              <p class="mt-2 text-xl text-center font-semibold text-blue-900">{{ libro.precio | currency: 'EUR' }}</p>
 
 
-                  <button (click)="verDetallesLibro(libro.id)" class="my-4 px-6 py-3 bg-blue-900 text-white font-medium rounded-lg">Ver detalles</button>
-                  <div class="absolute bg-gray-50 -bottom-24 w-56 p-3 flex flex-col gap-1">
-                  </div>
-      </div>
-    </div>
+              <button (click)="verDetallesLibro(libro.id)" class="my-4 px-6 py-3 bg-blue-900 text-white font-medium rounded-lg">Ver detalles</button>
+              <div class="absolute bg-gray-50 -bottom-24 w-56 p-3 flex flex-col gap-1">
+              </div>
+            </div>
+          </div>
 
         </div>
 
@@ -179,8 +174,8 @@
   <nav class="isolate inline-flex -space-x-px rounded-md shadow-xs" aria-label="Pagination">
 
     <button
-            (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1"
-       class="relative inline-flex items-center rounded-l-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 cursor-pointer">
+      (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1"
+      class="relative inline-flex items-center rounded-l-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 cursor-pointer">
       Anterior
       <span class="sr-only"></span>
       <svg class="size-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -188,7 +183,7 @@
       </svg>
     </button>
     <button (click)="goToPage(currentPage + 1)" [disabled]="currentPage >= totalPages"
-       class="relative inline-flex items-center rounded-r-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 cursor-pointer">
+            class="relative inline-flex items-center rounded-r-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 cursor-pointer">
       <span class="sr-only"></span>
       Siguiente
       <svg class="size-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -197,9 +192,3 @@
     </button>
   </nav>
 </div>
-
-
-
-
-
-
