--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -39,25 +39,6 @@
 
 </section>
 
-<!--<div class="flex items-center space-x-2 mx-60 my-10 px-20">-->
-<!--  <label for="sort" class="-->
-<!--   mb-2  font-bold text-[20px] text-[#1D2C4B] font-montserrat  text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"-->
-<!--  >Ordenar por</label>-->
-<!--  <select id="sort" class="border border-gray-300  text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"-->
-<!--          >-->
-<!--    <option default>Pick a team</option>-->
-<!--    <option  value="autor">Autor</option>-->
-<!--    <option value="titulo">Libro</option>-->
-<!--    <option value="fecha">Fecha edición</option>-->
-<!--    <option value="precio">Precio</option>-->
-<!--  </select>-->
-
-<!--</div>-->
-
-
-
-
-
 <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 p-4 bg-customGreen">
   <!-- Filtro Catalogo -->
   <div class="flex-shrink-0">
@@ -66,32 +47,31 @@
       <h1 class="text-2xl font-bold">Filtros</h1>
     </div>
 
+      <!--#################################3 FILTRO CATEGORÍA ############################## -->
+      <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9 border-t border-custom-blue">
+        <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Categoría</h3>
+        <div class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
+          <label *ngFor="let category of categories">
+            <input type="radio" name="category" [value]="category.id" (change)="onCategoryChange(category.id)">
+            {{ category.nombre }}
+          </label>
+          <button (click)="onCategoryChange(null)">Clear Category</button>
+        </div>
+      </div>
+
     <!--###################   FILTRO PRECIO ####################################-->
     <div class="border-b border-gray-200 py-6">
       <!-- Precios -->
       <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9 border-t border-custom-blue">
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Precios</h3>
-        <ul class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
-          <li><input type="checkbox" (change)="filterByPrice('menor5')" [checked]="selectedPriceRange ==='menor5'" class="mr-2">Menos de 5 euros</li>
-          <li><input type="checkbox" (change)="filterByPrice('5-10')" [checked]="selectedPriceRange ==='5-10'" class="mr-2">De 5 a 10 euros</li>
-          <li><input type="checkbox" (change)="filterByPrice('10-15')" [checked]="selectedPriceRange ==='10-15'" class="mr-2">De 10 a 15 euros</li>
-          <li><input type="checkbox" (change)="filterByPrice('15-40')" [checked]="selectedPriceRange ==='15-40'" class="mr-2">De 15 a 40 euros</li>
-          <li><input type="checkbox" (change)="filterByPrice('mayor40')" [checked]="selectedPriceRange ==='mayor40'" class="mr-2">Más de 40 euros</li>
-        </ul>
-      </div>
-      <!--#################################3 FILTRO CATEGORÍA ############################## -->
-      <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9 border-t border-custom-blue">
-        <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Categoría</h3>
-        <ul class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
-          <li *ngFor="let category of categories">
-            <input
-              type="checkbox"
-              [checked]="selectedCategoryId === category.id"
-              (change)="filterByCategory(category.id)"
-              class="mr-2">
-            {{ category.nombre }}
-          </li>
-        </ul>
+        <div class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
+          <label *ngFor="let range of priceRanges">
+            <input type="radio" name="priceRange" (change)="onPriceChange(range.value)">
+            {{ range.label }}
+          </label>
+          <button (click)="onPriceChange(null)">Clear Price Filter</button>
+
+        </div>
       </div>
     </div>
   </div>
