--- a/src/app/email/email.component.html
+++ b/src/app/email/email.component.html
@@ -46,7 +46,7 @@
       </form>
 
       <!-- Enlace a iniciar sesión -->
-      <p class="text-center text-sm mt-6 text-gray-600">
+      <p class="text-center  text-m mt-6 text-gray-600">
         ¿Ya tienes cuenta? <a href="/perfil-adm" class="text-blue-600 font-bold hover:underline">Perfil.</a>
       </p>
 
