--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -48,14 +48,14 @@
     </div>
 
       <!--#################################3 FILTRO CATEGORÍA ############################## -->
-      <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9 border-t border-custom-blue">
+      <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9">
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Categoría</h3>
         <div class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
           <label *ngFor="let category of categories">
-            <input type="radio" name="category" [value]="category.id" (change)="onCategoryChange(category.id)">
+            <input type="checkbox" [checked]="selectedCategoryId === category.id" name="category" (change)="onCategoryChange(category.id)">
             {{ category.nombre }}
           </label>
-          <button (click)="onCategoryChange(null)">Clear Category</button>
+<!--          <button (click)="onCategoryChange(null)">Clear Category</button>-->
         </div>
       </div>
 
@@ -66,10 +66,10 @@
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Precios</h3>
         <div class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
           <label *ngFor="let range of priceRanges">
-            <input type="radio" name="priceRange" (change)="onPriceChange(range.value)">
+            <input type="checkbox" [checked]="selectedPriceRanges.includes(range.value)" name="priceRange" (change)="onPriceChange(range.value)">
             {{ range.label }}
           </label>
-          <button (click)="onPriceChange(null)">Clear Price Filter</button>
+<!--          <button (click)="onPriceChange(null)">Clear Price Filter</button>-->
 
         </div>
       </div>
@@ -79,7 +79,7 @@
 
 
 
-  <div class="bg-white">
+  <div class="bg-white w-full">
     <div class="mx-auto max-w-2xl px-4 py-4 sm:px-6 sm:py-4 lg:max-w-7xl lg:px-8">
       <div *ngIf="noResults" class="text-center text-red-600 font-bold mt-4 bg-white">
         <p>No se han encontrado resultados</p>
