--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -4,7 +4,6 @@
     <div class="mt-10 md:mt-0 md:ml-0 lg:ml-0">
       <img src="../../../../assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
     </div>
-
     <div class="flex items-center justify-center text-center md:text-left max-w-2xl lg:max-w-xl mx-auto">
       <h1 class="text-4xl font-extrabold text-blue-900 leading-tight">
         Catálogo
@@ -12,7 +11,6 @@
     </div>
   </div>
 </section>
-
 <section class="bg-white py-4">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <div class="container mx-auto flex justify-center items-center space-x-4">
@@ -36,9 +34,7 @@
       ✖
     </button>
   </div>
-
 </section>
-
 <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 p-4 bg-customGreen">
   <!-- Filtro Catalogo -->
   <div class="flex-shrink-0">
@@ -46,7 +42,6 @@
     <div class="bg-[#1D2C4B] max-w-[333px] max-h-[65px] text-center rounded-lg text-white">
       <h1 class="text-2xl font-bold">Filtros</h1>
     </div>
-
       <!--#################################3 FILTRO CATEGORÍA ############################## -->
       <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9">
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Categoría</h3>
@@ -55,10 +50,8 @@
             <input type="checkbox" [checked]="selectedCategoryId === category.id" name="category" (change)="filterByCategory(category.id)">
             {{ category.nombre }}
           </label>
-<!--          <button (click)="onCategoryChange(null)">Clear Category</button>-->
         </div>
       </div>
-
     <!--###################   FILTRO PRECIO ####################################-->
     <div class="border-b border-gray-200 py-6">
       <!-- Precios -->
@@ -69,34 +62,33 @@
             <input type="checkbox" [checked]="selectedPriceRanges.includes(range.value)" name="priceRange" (change)="filterByPrice(range.value)">
             {{ range.label }}
           </label>
-<!--          <button (click)="onPriceChange(null)">Clear Price Filter</button>-->
-
         </div>
+      </div>
+      <div class="flex justify-center my-4">
+        <button (click)="clearFilters()" class="px-4 py-2 bg-red-500 text-white rounded-md">
+          Limpiar filtros
+        </button>
       </div>
     </div>
   </div>
-
-
-
-
   <div class="bg-white w-full">
     <div class="mx-auto max-w-2xl px-4 py-4 sm:px-6 sm:py-4 lg:max-w-7xl lg:px-8">
-      <div *ngIf="noResults" class="text-center text-red-600 font-bold mt-4 bg-white">
-        <p>No se han encontrado resultados</p>
-        <p>No hemos encontrado lo que busca pero si lo desea pude ponerse en contacto con nosotros y solicitarlo, o quizá prefiera volver a intentarlo realizando una búsqueda avanzada que se ajuste mejor a sus criterios.</p>
+      <!-- Message when no results found for search term -->
+      <div *ngIf="noResults && searchTerm" class="text-center text-red-600 font-bold mt-4 bg-white">
+        <p>No hay resultados para "{{ searchTerm }}"</p>
+      </div>
+      <!-- Message when filters are applied but no results -->
+      <div *ngIf="noResults && filtersApplied" class="text-center text-red-600 font-bold mt-4 bg-white">
+        <p>No hay resultados para los filtros aplicados.</p>
+      </div>
+      <!-- Message displaying the current search term -->
+      <div *ngIf="searchTerm && !noResults" class="text-center text-gray-700 font-bold mt-4 bg-white">
+        <p>Results for "{{ searchTerm }}"</p>
       </div>
     </div>
-
-    <!--    <div class="mx-auto max-w-2xl px-4 py-4 sm:px-6 sm:py-4 lg:max-w-7xl lg:px-8">-->
-    <!--      <div *ngIf="!libros || libros.length === 0" class="text-center text-black-600 mt-4 bg-white">-->
-    <!--        <p>No hay libros disponibles</p>-->
-    <!--      </div>-->
-    <!--    </div>-->
-
-
-
-
-
+    <div class="text-center text-gray-700 font-bold mt-4 mb-4">
+      <p>Total resultados: {{ totalResults }}</p>
+    </div>
     <div class="max-w-2xl px-4 sm:px-6  lg:max-w-7xl lg:px-8">
       <div *ngIf="!noResults" class="card--1 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
         <div *ngFor="let libro of filteredBooks" class="group  group cursor-pointer group overflow-hidden relative">
@@ -104,7 +96,6 @@
             <div class="relative">
               <img [src]="libro.imagen" [alt]="libro.titulo"  class=" h-80 aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
               <button  (click)="addToCart(libro)" class="add-to-cart absolute top-0 right-0 mt-4 mr-4 py-2 px-4 bg-blue-500 text-white rounded opacity-0 transition-opacity duration-300">
-
                 Añadir al carrito
               </button>
             </div>
@@ -112,42 +103,24 @@
               <h3 class="mt-0 mb-0 text-lg font-bold text-gray-800 text-center line-clamp-2">{{ libro.titulo }}</h3>
               <p class=" mt-0 mb-0 text-sm text-gray-600 text-center">por {{ libro.autor.nombre }} {{ libro.autor.apellidos }}</p>
               <p class="mt-2 text-xl text-center font-semibold text-blue-900">{{ libro.precio | currency: 'EUR' }}</p>
-
-
               <button (click)="verDetallesLibro(libro.id)" class="my-4 px-6 py-3 bg-blue-900 text-white font-medium rounded-lg">Ver detalles</button>
               <div class="absolute bg-gray-50 -bottom-24 w-56 p-3 flex flex-col gap-1">
               </div>
             </div>
           </div>
-
         </div>
-
-
       </div>
     </div>
-
-
-
   </div>
-
-
   <div *ngIf="showAlert" class="fixed top-0 left-0 right-0 flex justify-center transition-transform duration-500 transform translate-y-0">
     <div class="bg-blue-100 border-t border-b border-blue-500 text-blue-700 px-4 py-3 shadow-lg rounded-md w-full max-w-md mx-auto">
       <p class="font-bold">Acción no permitida</p>
       <p class="text-sm">Debes iniciar sesión para agregar al carrito.</p>
     </div>
   </div>
-
-
 </div>
-
-
-
-
 <div class="flex items-center justify-center border-t border-gray-200 bg-customTeal px-4 py-3 sm:px-6">
-
   <nav class="isolate inline-flex -space-x-px rounded-md shadow-xs" aria-label="Pagination">
-
     <button
       (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1"
       class="relative inline-flex items-center rounded-l-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 cursor-pointer">
@@ -157,7 +130,9 @@
         <path fill-rule="evenodd" d="M11.78 5.22a.75.75 0 0 1 0 1.06L8.06 10l3.72 3.72a.75.75 0 1 1-1.06 1.06l-4.25-4.25a.75.75 0 0 1 0-1.06l4.25-4.25a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd" />
       </svg>
     </button>
-    <button (click)="goToPage(currentPage + 1)" [disabled]="currentPage >= totalPages"
+    <button
+      *ngIf="currentPage < totalPages"
+      (click)="goToPage(currentPage + 1)" [disabled]="currentPage >= totalPages"
             class="relative inline-flex items-center rounded-r-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 cursor-pointer">
       <span class="sr-only"></span>
       Siguiente
