cambios realizados para crear libro

--- a/src/app/page/perfil-adm/perfil-adm.component.html
+++ b/src/app/page/perfil-adm/perfil-adm.component.html
@@ -81,7 +81,11 @@
     <!-- Botón para registro Libro -->
     <div class="mt-8">
       <a routerLink="/registro-libro" class="bg-blue-500 text-white px-6 py-3 rounded-full inline-block text-center font-semibold">
-        Registro Libro
+        Crear Libro
+      </a>
+
+      <a routerLink="/editar-libro" class="bg-blue-500 text-white px-6 py-3 rounded-full inline-block text-center font-semibold">
+        Editar y Eliminar Libro
       </a>
     </div>
 
