--- a/src/app/component/registro-libro/registro-libro.component.html
+++ b/src/app/component/registro-libro/registro-libro.component.html
@@ -113,20 +113,21 @@
           </div>
 
           <!-- Grupo Autor -->
-          <div>
+          <div formGroupName="autor">
             <label for="autorId" class="block text-sm font-medium text-gray-700">ID del Autor</label>
-            <input type="text" id="autorId" formControlName="autor.id"
+            <input type="text" id="autorId" formControlName="id"
                    class="mt-1 block w-full border border-gray-300 rounded-md p-3"
                    placeholder="Ingrese el ID del autor">
           </div>
 
           <!-- Grupo Categoría -->
-          <div>
+          <div formGroupName="categoria">
             <label for="categoriaId" class="block text-sm font-medium text-gray-700">ID de la Categoría</label>
-            <input type="text" id="categoriaId" formControlName="categoria.id"
+            <input type="text" id="categoriaId" formControlName="id"
                    class="mt-1 block w-full border border-gray-300 rounded-md p-3"
                    placeholder="Ingrese el ID de la categoría">
           </div>
+
 
           <!-- Botón Guardar -->
           <div class="mt-6">
