--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -54,7 +54,7 @@
           <li *ngIf="isAdmin">
             <a routerLink="/perfil-adm" class=" text-l block px-4 py-2 text-custom-blue hover:bg-gray-100">Perfil Admin</a>
           </li>
-          <li><a routerLink="/mis-pedidos" class=" text-l block px-4 py-2 text-custom-blue hover:bg-gray-100">Mis Pedidos</a></li>
+          <li><a routerLink="/pedidos-cliente" class=" text-l block px-4 py-2 text-custom-blue hover:bg-gray-100">Mis Pedidos</a></li>
           <li>
             <button (click)="logout()" class=" text-l block w-full text-left px-4 py-2 hover:bg-red-100 text-red-600">
               Cerrar Sesión
