cambios realizados para recuperar contraseña

--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -53,6 +53,11 @@
         <a href="/registro" class="text-blue-600 font-bold hover:underline">Regístrate aquí.</a>
       </p>
 
+      <p class="text-center text-lg mt-6 text-gray-600">
+        ¿Recuperar Contraseña?
+        <a href="/recuperar-contrasena" class="text-blue-600 font-bold hover:underline">Recuperalo aquí.</a>
+      </p>
+
       <!-- Mostrar mensaje de error -->
       <div>
         <p *ngIf="errorMessage" class="alert alert-error p-4 mt-4 bg-red-100 text-red-800 border border-red-400 rounded">
