--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -29,8 +29,7 @@
     <button
       *ngIf="searchTerm"
       (click)="clearSearch()"
-      class="bg-gray-300 text-gray-700 px-6 py-2 rounded hover:bg-gray-400"
-    >
+      class="bg-gray-300 text-gray-700 px-6 py-2 rounded hover:bg-gray-400">
       ✖
     </button>
   </div>
