Actualización con rama pablo github

--- a/src/app/libro-edicion/editar-libro/editar-libro.component.html
+++ b/src/app/libro-edicion/editar-libro/editar-libro.component.html
@@ -31,7 +31,8 @@
 
         <!-- Formulario -->
         <div class="md:w-2/3 w-full">
-          <form [formGroup]="libroForm" (ngSubmit)="guardarLibro()">
+          <form [formGroup]="libroForm">
+<!--            <form [formGroup]="libroForm" (ngSubmit)="guardarLibro()">-->
             <!-- Título -->
             <div>
               <label for="titulo" class="block text-sm font-medium text-gray-700">Título</label>
