--- a/src/app/libro-edicion/registro-libro/registro-libro.component.html
+++ b/src/app/libro-edicion/registro-libro/registro-libro.component.html
@@ -15,7 +15,8 @@
 
       <!-- Formulario para Crear -->
       <div class="md:w-2/3 w-full">
-        <form [formGroup]="libroForm" (ngSubmit)="guardarLibro()">
+        <form [formGroup]="libroForm">
+<!--          <form [formGroup]="libroForm" (ngSubmit)="guardarLibro()">-->
           <!-- Título -->
           <div>
             <label for="titulo" class="block text-sm font-medium text-gray-700">Título</label>
