--- a/src/app/libro-edicion/editar-libro/editar-libro.component.html
+++ b/src/app/libro-edicion/editar-libro/editar-libro.component.html
@@ -4,7 +4,7 @@
     <div class="container mx-auto flex flex-col md:flex-row items-center px-4 md:px-6 lg:px-8 lg:gap-x-4 justify-between">
       <img src="/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
       <h1 class="text-4xl font-extrabold text-blue-900 leading-tight">
-        Registrar Libro
+        Editar y Eliminar Libro
       </h1>
     </div>
   </section>
