--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -30,8 +30,7 @@
       *ngIf="searchTerm"
       (click)="clearSearch()"
       class="bg-gray-300 text-gray-700 px-6 py-2 rounded hover:bg-gray-400">
-      ✖
-    </button>
+      ✖</button>
   </div>
 </section>
 <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 p-4 bg-customGreen">
