Añadido una pagina SobreNosotros y he mejorado página Inicio en cuanto al html.

--- a/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
+++ b/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
@@ -1,9 +1,7 @@
-<section class="py-10 bg-customAzulito">
+
+<section class="py-10 " style="background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url('../../../../assets/fondo_puntosafa2.jpeg'); background-size: cover; background-position:center 45% ;">
   <div class="container mx-auto relative">
-    <h2 class="text-2xl font-bold text-center text-blue-900">EXPLORA NUESTROS LIBROS</h2>
-
-
-
+    <h2 class="text-2xl font-bold text-center text-blue-900 bg-gray-300 bg-opacity-40">EXPLORA NUESTROS LIBROS</h2>
     <!-- Carrusel -->
     <div
       #carousel
