--- a/src/app/page/detalle-de-libro/detalle-de-libro.component.html
+++ b/src/app/page/detalle-de-libro/detalle-de-libro.component.html
@@ -1,5 +1,6 @@
-<div class="bg-customAzulito mb-2">
-  <section class="bg-customGreen py-4 shadow-gray-500 shadow-sm">
+<section class="min-h-[calc(100vh-8rem)] py-16 px-4 sm:px-6 lg:px-8 relative" style="background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.4)), url('../../../../assets/puntosafa_fondo3.jpeg'); background-size: cover; background-position: center;">
+
+  <div class="bg-customGreen py-4 shadow-gray-500 shadow-sm">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
     <div class="container mx-auto flex flex-col md:flex-row items-center px-6 lg:px-8 justify-between">
@@ -13,7 +14,7 @@
         </h1>
       </div>
     </div>
-  </section>
+  </div>
 
   <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-md overflow-hidden flex flex-col md:flex-row mt-8 mb-8 gap-x-8 p-6">
     <!-- Imagen del libro -->
@@ -144,4 +145,4 @@
   </div>
 
 
-</div>
+</section>
