Cambio en SobreNosotro porque antes no pillaba el componente.

--- a/src/app/component/Inicio_componentes_propios/hero-section-inicio/hero-section-inicio.component.html
+++ b/src/app/component/Inicio_componentes_propios/hero-section-inicio/hero-section-inicio.component.html
@@ -11,7 +11,7 @@
         Te presentamos nuestro espacio literario, en el que encontrarás una amplia selección de libros, desde los clásicos hasta las más recientes historias. ¡Ven y descubre tu próxima gran lectura!
       </p>
       <button
-        routerLink="/sobre-nosotros"
+        (click)="navigateToAboutUs()"
         class="mt-6 px-6 py-3 bg-blue-900 text-white font-medium rounded-lg hover:bg-gray-400 transition shadow-lg shadow-gray-500"
       >
         Sobre nosotros
