--- a/src/app/libro-edicion/editar-libro/editar-libro.component.html
+++ b/src/app/libro-edicion/editar-libro/editar-libro.component.html
@@ -163,7 +163,7 @@
 
             <!-- Botón Eliminar (solo visible cuando hay un libro cargado, es decir, en modo edición) -->
             <div class="mt-6" *ngIf="isEditMode">
-              <button type="button" (click)="eliminarLibro()"
+              <button type="button"
                       class="w-full bg-red-500 text-white py-3 rounded-lg font-semibold text-lg shadow-md hover:bg-red-600 transition duration-300">
                 Eliminar
               </button>
