--- a/src/app/component/carrito-compra/carrito-compra.component.html
+++ b/src/app/component/carrito-compra/carrito-compra.component.html
@@ -54,7 +54,7 @@
                   </div>
                   <p class="mt-0.5 text-sm text-gray-500">Costes de envío calculados al pagar.</p>
                   <div class="mt-6">
-                    <button (click)="pagarPedido()" class="flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-6 py-3 text-base font-medium text-white shadow-xs hover:bg-indigo-700">Finalizar compra</button>
+                    <button (click)="pagarPedido()" class="flex items-center justify-center rounded-md border border-transparent bg-custom-blue px-6 py-3 text-base font-medium text-white shadow-xs hover:bg-yellow-500">Finalizar compra</button>
                   </div>
                   <div class="mt-6 flex justify-center text-center text-sm text-gray-500">
                   </div>
