--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -1,16 +1,29 @@
-<section class="bg-customGreen py-1 md:py-2 shadow-gray-500 shadow-sm" xmlns="http://www.w3.org/1999/html">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <div class="container mx-auto flex flex-col md:flex-row items-centerpx-4 md:px-6 lg:px-8 lg:gap-x-4 justify-between">
-    <div class="mt-10 md:mt-0 md:ml-0 lg:ml-0">
-      <img src="../../../../assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
+<section class="bg-customGreen py-4 md:py-6 shadow-gray-500 shadow-sm">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+  <div class="container mx-auto flex flex-col md:flex-row items-center px-4 md:px-6 lg:px-8 gap-6 md:gap-8">
+
+    <!-- Logo -->
+    <div class="flex-shrink-0">
+      <img src="../../../../assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-32 md:w-40 lg:w-48 mx-auto">
     </div>
-    <div class="flex items-center justify-center text-center md:text-left max-w-2xl lg:max-w-xl mx-auto">
-      <h1 class="text-4xl font-extrabold text-blue-900 leading-tight">
+
+    <!-- Texto con más espacio -->
+    <div class="md:text-left w-full max-w-3xl flex-grow text-justify">
+      <h1 class="text-4xl md:text-5xl font-extrabold text-blue-900 leading-tight">
         Catálogo
       </h1>
+      <p class="mt-3 text-lg text-gray-800 leading-relaxed">
+        <strong>El universo de los libros te espera...</strong><br/>
+        Desde cuentos estelares hasta ciencia fascinante, aquí encontrarás historias para todos los exploradores del conocimiento.
+        Embárcate en un viaje a través de páginas llenas de aventuras, misterios y descubrimientos. <br/>
+        <strong>¿Listo para tu próxima misión de lectura? 🚀 </strong>
+      </p>
     </div>
   </div>
 </section>
+
+
 <section class="bg-white py-4">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <div class="container mx-auto flex justify-center items-center space-x-4">
